add Security configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=authorization-server
-server.port=9090
+server.port=9000
+
+spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:h2:mem:testserver
+spring.datasource.name=testserver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
